[package]
name = "sysunit"
version = "0.1.0"
authors = ["Jack Forrest <jack@jrforrest.net>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
rust-crypto = "0.2.36"
colored = "1.9"
unicode-truncate = "0.1.1"
ssh2 = { version = "0.8.3", features = ["vendored-openssl"] }
rpassword = "4.0.5"
url = "2.1.1"
log = "0.4.11"
env_logger = "0.8.1"
